--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,5 @@ include_directories( include )
 add_executable(000_helloworld              src/000_helloworld.cpp)
 add_executable(037_sudoku_solver           src/037_sudoku_solver.cpp)
 add_executable(307_Range_Sum_Query_Mutable src/307_Range_Sum_Query_Mutable.cpp)
+add_executable(764_Largest_Plus_Sign       src/764_Largest_Plus_Sign.cpp)
 add_executable(850_Rectangle_Area_II       src/850_Rectangle_Area_II.cpp)
