--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 include_directories( include )
 
 # -- Executable
-add_executable(000_helloworld                          src/000_helloworld.cpp)
-add_executable(002_Add_Two_Numbers                     src/002_Add_Two_Numbers.cpp)
-add_executable(037_sudoku_solver                       src/037_sudoku_solver.cpp)
-add_executable(307_Range_Sum_Query_Mutable             src/307_Range_Sum_Query_Mutable.cpp)
-add_executable(485_Max_Consecutive_Ones                src/485_Max_Consecutive_Ones.cpp)
-add_executable(725_Split_Linked_List_in_Parts          src/725_Split_Linked_List_in_Parts.cpp)
-add_executable(764_Largest_Plus_Sign                   src/764_Largest_Plus_Sign.cpp)
-add_executable(850_Rectangle_Area_II                   src/850_Rectangle_Area_II.cpp)
-add_executable(882_Reachable_Nodes_In_Subdivided_Graph src/882_Reachable_Nodes_In_Subdivided_Graph.cpp)
+file( GLOB EXES src/*.cpp )
+foreach( srcpath ${EXES} )
+    get_filename_component(exename ${srcpath} NAME_WE)
+    message(${exename} " " ${srcpath})
+    add_executable( ${exename} ${srcpath} )
+    # target_link_libraries( ${srcpath} Lib )
+endforeach( srcpath ${EXES} )
